Mail client changed to use smtp relay

--- a/web/source_code/.env
+++ b/web/source_code/.env
@@ -22,9 +22,11 @@ MASTER_KEY=tIYBkSMbBpBQebVVjGwjrK3YV9XswabiqiA_ovjBkK4=
 
 USERNAME_PEPPER=a2d63cdfa14599af6d8b16c2828e1e9f
 
-AUTH_EMAIL_ACCOUNT=auth-daemon@bizniz.io
-AUTH_EMAIL_PWD=j78+2C^cG5vHs%uAjH4w
+# AUTH_EMAIL_ACCOUNT=auth-daemon@bizniz.io
+# AUTH_EMAIL_PWD=j78+2C^cG5vHs%uAjH4w
 # AUTH_EMAIL_PWD=ethiopia
+
+
 VERIFY-PHONE_EMAIL_PWD=verify-phone@bizniz.tIYBkSMbBpBQebVVjGwjrK3YV9XswabiqiA_ovjBkK4
 
 NUMVERIFY_API_KEY=3cb70d06a0bd28ea543b89c0bb8daadf
